--- a/.github/workflows/rsync.yml
+++ b/.github/workflows/rsync.yml
@@ -14,7 +14,7 @@ jobs:
       - name: perform sync
         run: |
           distro="archlinux"
-          ./bfsu-rsync.sh ${distro}
+          /mnt/socoding/mirror-sync/bfsu-rsync.sh ${distro}
   
   archlinuxcn:
     runs-on: [self-hosted, linux, main, socoding]
@@ -23,4 +23,4 @@ jobs:
       - name: perform sync
         run: |
           distro="archlinuxcn"
-          ./bfsu-rsync.sh ${distro}
+          /mnt/socoding/mirror-sync/bfsu-rsync.sh ${distro}
